Обновление зависимостей, команда "/servers" и др

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,5 +1,5 @@
-Полный рефакторинг тут!
-В этом патче был добавлен файл "~/utils/migraters/migrate-acts.ts", который поможет Вам "пересобрать" файлы с активностями, если Вы использовали старый формат (будет полезно для тестировщиков).
-Помимо этого был обновлён "~/libs/Printer.ts" (функция notify(), приватный метод cut()) и добавлен список задач (ToDo-list).
-Была добавлена команда "encourage".
-Удалёны пакеты prisma @prisma/client
+@2.2.2
+Обновил зависимости.
+Почистил импорты в коммандах.
+Папка "~/docs" (в корне проекта).
+Удалён "todos.ts" (лишнее).
